# testprac

./: README.md  main.py  pyproject.toml
bokeh/: pyproject.toml
bokeh_viz/: pyproject.toml
bokeh_viz/bokeh_viz/: bokeh_intro.ipynb  stock_metrics.html  storytelling.ipynb  widgets.ipynb
dashboard/: pyproject.toml
dashboard/dashboard/: dash_starter.ipynb  dash_starter.py  data_table.ipynb  plotly_refresh.ipynb  reusable_component.ipynb  slider_component.ipynb  two_graph_interaction.ipynb  user_inputs.ipynb
dashboard_with_dash/: pyproject.toml
dashboard_with_dash/dashboard_with_dash/: callback.ipynb  callback_chain.ipynb  data_table_styling.ipynb  datepicker_component.ipynb  hover_click.ipynb
dashboard_with_dash/data/: ecom_data.csv
dataviz/: pyproject.toml
dataviz/dataviz/: intro_seaborn.py
datetime_fundamental/: pyproject.toml
datetime_fundamental/datetime_fundamental/: helloworld.py  test_all.py  utc_offset.py
datetime_fundamental/tests/: test_createthings_version.py  test_helloworld.py
geospatial/: pyproject.toml
geospatial/data/Mines/: cod_conservation_utm.dbf  ipis_cod_mines_utm.gpkg
geospatial/data/Mines/__MACOSX/: ._ipis_cod_mines.geojson
geospatial/geospatial/: coordinate_ref_systems.py  gepspatial_data_processing_panda.py  handling_vector_geospatial_data_geopanda.py  spatial_relationship.py
geospatial_dataviz/: pyproject.toml
geospatial_dataviz/data/council_districts/__MACOSX/: ._council_districts.geojson
geospatial_dataviz/geospatial_dataviz/: aee.html  choropleth.html  choropleth.py  downtownmap.html  latlong_scatterplot.py  neighbourhood.html  qualatitve_colrmap.py
geospatial_fundamental/: pyproject.toml
geospatial_fundamental/data/Mines/: cod_conservation_utm.shp  cod_conservation_utm.shx
geospatial_fundamental/data/Mines/__MACOSX/: ._ipis_cod_mines_utm.gpkg
geospatial_fundamental/data/Mines/cod_conservation/Conservation/: RDC_aire_protegee_2013.shp.xml
geospatial_fundamental/geospatial_fundamental/: exploring_spatial_data.py  gepspatial_data_processing_panda.py  mine_analysis.py
missing_val_viz/: pyproject.toml
missing_val_viz/missing_val_viz/: missing_value.ipynb  utils.py
newproject/: pyproject.toml
newproject/newproject/: __init__.py  combining_date_time.py  config.py  date_calender.py  reading_date_with_panda.py  test_all.py
plotley_basic/: pyproject.toml
plotley_basic/data/: revenue_data2.csv
plotley_basic/plotley_basic/: color_customization.ipynb  subplots.ipynb
plotley_fundamental/: pyproject.toml
plotley_fundamental/plotley_fundamental/: bivariate.ipynb  bivariate_viz.ipynb  plotly_intro.py  time_buttons.ipynb  univariate_viz.py
seaborn_fundamental/: pyproject.toml
seaborn_fundamental/seaborn_fundamental/: count_bar_plot.py  seaborn_customization.py  seaborn_intro.py  two_quanttative_variable.py
statisticalthinking/: pyproject.toml
statisticalthinking/statisticalthinking/: graphical_exploration.py  numpy_binomial_distribution.py  numpy_data_viz_seaborn.py  numpy_normal_distribution.py  numpy_random.py  numpy_random_data_distribution.py  numpy_random_permutation.py
timeseries_viz/: pyproject.toml
timeseries_viz/timeseries_viz/: data_cleansing.ipynb  first_timeseries_plot.ipynb  more_than_one_timeseries.ipynb  trend_viz.ipynb  use_case.ipynb
