[tool.poetry]
name = "testpycharmpoetry"
version = "0.1.0"
description = ""
authors = ["Tapajoyti Chowdhury <tchowdhury@tnsiit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.63"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
numpy = "^2.2.0"
seaborn = "^0.13.2"
mpld3 = "^0.5.10"
contextily = "^1.6.2"
geopandas = "^1.0.1"
mapclassify = "^2.8.1"
rasterio = "^1.4.3"
rasterstats = "^0.20.0"
folium = "^0.19.2"
plotly = "^5.24.1"
cufflinks = "^0.17.3"
nbformat = "^5.10.4"
jupyter = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
