[tool.poetry]
name = "geospatial_fundamental"
version = "0.1.0"
description = ""
authors = ["Tapajoyti Chowdhury <tchowdhury@tnsiit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.2.0"
contextily = "^1.6.2"
geopandas = "^1.0.1"
shapely = "^2.0.6"
mapclassify = "^2.8.1"
rasterio = "^1.4.3"
rasterstats = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
